--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
     "@reduxjs/toolkit": "^1.8.6",
+    "roots-manager": "/Users/meenyleeny/VSCode/roots-event-handler/roots-manager-v0.0.11.tgz",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "react": "18.1.0",
