--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "pod-install": "RCT_NEW_ARCH_ENABLED=0 bundle exec pod install"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.5",
@@ -20,10 +21,10 @@
     "@reduxjs/toolkit": "^1.8.6",
     "roots-manager": "/Users/meenyleeny/VSCode/roots-event-handler/roots-manager-v0.0.11.tgz",
     "@types/react": "~18.0.0",
-    "@types/react-native": "~0.69.1",
-    "react": "18.1.0",
+    "@types/react-native": "^0.70.6",
+    "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.70.6",
+    "react-native": "^0.70.6",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-paper": "^5.0.1",
@@ -47,11 +48,10 @@
     "@babel/runtime": "^7.20.6",
     "@faker-js/faker": "^7.6.0",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@types/react-native": "^0.70.8",
+    "@types/react-native": "^0.70.6",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
@@ -64,14 +64,14 @@
     "typescript": "^4.8.3"
   },
   "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
+    "preset": "react-native"
+  },
+  "peerDependencies": {
+    "lodash": "*",
+    "lodash.isstring": "*",
+    "react": "*",
+    "react-native": "*",
+    "react-native-paper": "*",
+    "react-native-vector-icons": "*"
   }
 }
